Added new image

--- a/covid-19/index.html
+++ b/covid-19/index.html
@@ -9,7 +9,7 @@
 	<meta property="og:type"               content="article" />
 	<meta property="og:title"              content="Secret COVID-19 Prevention Measures" />
 	<meta property="og:description"        content="You won't believe the secrets the government are trying to cover up" />
-	<meta property="og:image"              content="https://www.cattco.org/sites/default/files/term-images/3D_medical_animation_coronavirus_structure.jpg" />
+	<meta property="og:image"              content="3D_medical_animation_coronavirus_structure.jpg" />
 
 	<style>
     
