--- a/covid-19/index.html
+++ b/covid-19/index.html
@@ -10,6 +10,8 @@
 	<meta property="og:title"              content="Secret COVID-19 Prevention Measures" />
 	<meta property="og:description"        content="You won't believe the secrets the government are trying to cover up" />
 	<meta property="og:image"              content="3D_medical_animation_coronavirus_structure.jpg" />
+	<meta property="og:image:width"              content="1920" />
+	<meta property="og:image:height"              content="1080" />
 
 	<style>
     
